# fastzap-chat-app-tech-test

./: .dockerignore  .env.example  Dockerfile  README.md  docker-compose.dev.yaml  docker-compose.yaml  pyproject.toml
config/: asgi.py  celery.py  settings.py  urls.py
core/: admin.py  consumers.py  middlewares.py  models.py  permissions.py  router.py  routing.py  serializers.py  tasks.py  urls.py  utils.py  views.py
core/migrations/: 0001_initial.py  0002_alter_room_members_alter_roommember_room_and_more.py
core/tests/: test_consumers.py  test_tasks.py  test_views.py
front/: Dockerfile  nuxt.config.ts  package-lock.json  package.json
front/assets/css/: main.css
front/composables/: useAuth.ts  useScrollElement.ts
front/layouts/: default.vue
front/pages/: index.vue  login.vue
front/pages/room/: [id].vue  new.vue
front/plugins/: preline.client.ts
front/types/: global.d.ts
