[project]
name = "fastzap-chat-app-tech-test"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "celery>=5.5.1",
    "channels-redis>=4.2.1",
    "channels[daphne]>=4.2.2",
    "django>=5.2",
    "django-celery-results>=2.6.0",
    "django-cors-headers>=4.7.0",
    "djangorestframework>=3.16.0",
    "djangorestframework-simplejwt>=5.5.0",
    "drf-spectacular>=0.28.0",
    "environs[django]>=14.1.1",
    "psycopg2-binary>=2.9.10",
    "pydantic-ai>=0.1.3",
    "redis>=5.2.1",
]

[dependency-groups]
dev = [
    "pre-commit>=4.2.0",
    "ruff>=0.11.5",
]
